--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
   <version>1.0-SNAPSHOT</version>
   <properties>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <surefire-plugin.version>2.22.0</surefire-plugin.version>
+    <surefire-plugin.version>3.0.0-M4</surefire-plugin.version>
     <maven.compiler.parameters>true</maven.compiler.parameters>
-    <quarkus.version>0.26.1</quarkus.version>
+    <quarkus.version>1.0.1.Final</quarkus.version>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <maven.compiler.source>11</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
