--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    
+    <!-- Lombok-->
+    <dependency>
+		  <groupId>org.projectlombok</groupId>
+		  <artifactId>lombok</artifactId>
+		  <version>1.18.12</version>
+		  <scope>provided</scope>
+	  </dependency>
   </dependencies>
   <build>
     <plugins>
