--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -14,11 +14,11 @@
 # docker run -i --rm -p 8080:8080 quarkus/core-jvm
 #
 ###
-FROM fabric8/java-alpine-openjdk8-jre
+FROM fabric8/java-alpine-openjdk11-jre
 ENV JAVA_OPTIONS="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
 ENV AB_ENABLED=jmx_exporter
-COPY target/lib/* /deployments/lib/
-COPY target/*-runner.jar /deployments/app.jar
+COPY api-analiseprocessos/target/lib/* /deployments/lib/
+COPY api-analiseprocessos/target/*-runner.jar /deployments/app.jar
 EXPOSE 8080
 
 # run with user 1001 and be prepared for be running in OpenShift too
