Configuração de um Dockerfile para uso em produção. Configuração de um arquivo com variáveis de ambiente. Arquivo application.properties configurado para receber as variáveis do ambiente.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-quarkus.datasource.url=jdbc:postgresql://localhost:5432/tche
-quarkus.datasource.driver=org.postgresql.Driver
-quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
-quarkus.hibernate-orm.database.generation=update
-quarkus.hibernate-orm.log.sql=true
+quarkus.datasource.driver=${DB_DRIVER}
+quarkus.datasource.url=jdbc:${DB_SERVER}://${DB_HOST}:${DB_PORT}/${DB_NAME}
+quarkus.datasource.username=${DB_USERNAME}
+quarkus.datasource.password=${DB_PASSWORD}
+quarkus.http.cors=${CORS}
+quarkus.http.cors.origins=${BASE_URL}:${CORS_PORTS}
+
+#Development configurations
+%dev.quarkus.hibernate-orm.log.sql=true
+
+#Production configurations
+%prod.quarkus.hibernate-orm.log.sql=false
+
+quarkus.hibernate-orm.database.generation=none
 quarkus.swagger-ui.always-include=true
