--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 quarkus.datasource.driver=${DB_DRIVER}
-quarkus.datasource.url=jdbc:${DB_SERVER}://${DB_HOST}:${DB_PORT}/${DB_NAME}
+quarkus.datasource.url=jdbc:${DB_SERVER}://${DB_HOST}/${DB_NAME}
 quarkus.datasource.username=${DB_USERNAME}
 quarkus.datasource.password=${DB_PASSWORD}
-quarkus.http.cors=${CORS}
-quarkus.http.cors.origins=${BASE_URL}:${CORS_PORTS}
+quarkus.http.cors=true
+quarkus.http.cors.origins=${FRONT_URL}
 
 #Development configurations
 %dev.quarkus.hibernate-orm.log.sql=true
