Criando imagem da API

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ build:
     - echo "DB_PASSWORD=$PROD_DB_PASSWORD" >> .env
     - echo "FRONT_HOST=http://aproc.urcamp.edu.br" >> .env
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
-    - docker build --pull -t $LATEST_IMAGE -f ./src/main/docker/Dockerfile .
+    - docker build --build-arg DB_DRIVER=org.postgresql.Driver --build-arg DB_SERVER=postgresql --build-arg DB_HOST=$PROD_DB_HOST --build-arg DB_NAME=$PROD_DB_NAME --build-arg DB_USERNAME=$PROD_DB_USERNAME --build-arg DB_PASSWORD=$PROD_DB_PASSWORD --build-arg FRONT_HOST=http://aproc.urcamp.edu.br --pull -t $LATEST_IMAGE -f ./src/main/docker/Dockerfile .
     - docker push $LATEST_IMAGE
   only:
     - master
