--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -8,15 +8,15 @@ COPY . .
 #Define os argumentos
 
 #Driver do banco de dados. Ex.: org.postgresql.Driver
-ARG DB_DRIVER
+#ARG DB_DRIVER
 #Banco de dados utilizado. Ex.: postgres
-ARG DB_SERVER
-ARG DB_HOST
-ARG DB_NAME
-ARG DB_USERNAME
-ARG DB_PASSWORD
+#ARG DB_SERVER
+#ARG DB_HOST
+#ARG DB_NAME
+#ARG DB_USERNAME
+#ARG DB_PASSWORD
 #URL do front-end com
-ARG FRONT_HOST
+#ARG FRONT_HOST
 
 #Roda o goal do Maven para empacotamento
 RUN mvn package
