--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-quarkus.datasource.driver=${DB_DRIVER}
-quarkus.datasource.url=jdbc:${DB_SERVER}://${DB_HOST}/${DB_NAME}
+quarkus.datasource.driver=org.postgresql.Driver
+quarkus.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
 quarkus.datasource.username=${DB_USERNAME}
 quarkus.datasource.password=${DB_PASSWORD}
 quarkus.http.cors=true
