--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
+<?xml version="1.0" ?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>br.com.helison</groupId>
   <artifactId>core</artifactId>
-  <version>0.1.1</version>
+  <version>0.2.0-SNAPSHOT</version>
   <properties>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <surefire-plugin.version>3.0.0-M4</surefire-plugin.version>
@@ -60,15 +60,20 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
-    
+
     <!-- Lombok-->
     <dependency>
-		  <groupId>org.projectlombok</groupId>
-		  <artifactId>lombok</artifactId>
-		  <version>1.18.12</version>
-		  <scope>provided</scope>
-	  </dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.12</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
+
+  <scm>
+    <developerConnection>scm:git:https://gitlab.urcamp.edu.br/urcamp/analiseprocessos-api</developerConnection>
+  </scm>
+
   <build>
     <plugins>
       <plugin>
@@ -86,6 +91,14 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${compiler-plugin.version}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>3.0.0-M1</version>
+        <configuration>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
