--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>br.com.helison</groupId>
   <artifactId>core</artifactId>
-  <version>0.2.0</version>
+  <version>0.2.0-SNAPSHOT</version>
   <properties>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <surefire-plugin.version>3.0.0-M4</surefire-plugin.version>
@@ -72,7 +72,6 @@
 
   <scm>
     <developerConnection>scm:git:https://gitlab.urcamp.edu.br/urcamp/analiseprocessos-api</developerConnection>
-    <tag>beta</tag>
   </scm>
 
   <build>
