Adiciona a dependência quarkus-smallrye-jwt
Esta dependência é necessária para a geração e verificação de JWTs.

Adiciona a versão mais recente da dependência do quarkus-smallrye-jwt.

[Ticket: HIS006]

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
       <version>1.18.12</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-jwt</artifactId>
+    </dependency>
   </dependencies>
 
   <scm>
