Adiciona configurações para a geração e verificação de JWTs.
Foi atualizado o arquivo de configuração application.properties com as configurações necessárias para a dependência quarkus-smallrye-jwt. As chaves pública e privada foram inseridas nos arquivos ignorados pelo controle de versão.

[Ticket: HIS006]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,16 @@ quarkus.http.cors.origins=${FRONT_URL}
 
 quarkus.hibernate-orm.database.generation=none
 quarkus.swagger-ui.always-include=true
+
+quarkus.smallrye-jwt.enabled=true
+mp.jwt.verify.publickey.location=META-INF/resources/publicKey.pem 
+%dev.smallrye.jwt.new-token.issuer=http://localhost:8080
+%dev.mp.jwt.verify.issuer=http://localhost:8080
+
+%prod.smallrye.jwt.new-token.issuer=http://api.aproc.urcamp.edu.br
+%prod.mp.jwt.verify.issuer=http://api.aproc.urcamp.edu.br
+
+smallrye.jwt.sign.key-location=META-INF/privateKey.pem
+smallrye.jwt.new-token.lifespan=7200
+quarkus.log.category."io.quarkus.smallrye.jwt.runtime.auth.MpJwtValidator".level=TRACE
+smallrye.jwt.token.kid=META-INF/privateKey.pem
